--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P-Number</title>
+  <title>P2508194</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+
   <h1>Hello World</h1>
 
   <script src="js/scripts.js"></script>
