Reworked stylesheet to conform to "Mobile first". Implemented a new nav.

--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>P2508194</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <header>
     <h1>Hugh Alun-Jones</h1>
+    <p>Software Engineering Student at De Montfort University</p>
+    <nav id="menu">
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <img src="https://placekitten.com/300/150" alt="a kitten">
   </header>
-  <nav>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-    <a href="#">Projects</a>
-  </nav>
   <main>
-    <h2>Lorem Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <section>
-      <img src="https://placekitten.com/600/400" alt="a cat">
-      <img src="https://placekitten.com/600/400" alt="a cat">
-      <img src="https://placekitten.com/600/400" alt="a cat">
-    </section>
-
-    <h2>Ipsum Lorem</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </main>
   <footer>
 
