Began altering the style sheet for larger devices.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,29 @@
     <p>Software Engineering Student at De Montfort University</p>
     <nav id="menu">
       <a href="#about">About</a>
+      <div></div>
       <a href="#projects">Projects</a>
+      <div></div>
       <a href="#contact">Contact</a>
     </nav>
-    <img src="https://placekitten.com/300/150" alt="a kitten">
+    <img class="top-banner" src="https://placekitten.com/300/150" alt="a kitten">
   </header>
   <main>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <section>
+      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+    <section class="polaroid">
+      <div class="cardImg">
+        <img src="https://placekitten.com/200/150" alt="a kitten">
+        <div class="container">A kitten</div>
+      </div>
+    </section>
   </main>
   <footer>
-
+    <section class="socialIcons">
+      <p><a href="https://twitter.com">&#9733;</a></p>
+      <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+    </section>
   </footer>
   <script src="js/scripts.js"></script>
 </body>
