Updated the site to work with larger screens.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,46 @@
     <div></div>
   </div>
   <header>
-    <h1>Hugh Alun-Jones</h1>
-    <p>Software Engineering Student at De Montfort University</p>
-    <nav id="menu">
-      <a href="#about">About</a>
-      <div></div>
-      <a href="#projects">Projects</a>
-      <div></div>
-      <a href="#contact">Contact</a>
-    </nav>
+    <section class="title-nav">
+      <section class="title">
+        <h1>Hugh Alun-Jones</h1>
+        <h2>Software Engineering Student at De Montfort University</h2>
+      </section>
+      <section class="nav-bar">
+        <nav>
+          <a href="#about">About</a>
+          <div></div>
+          <a href="#projects">Projects</a>
+          <div></div>
+          <a href="#contact">Contact</a>
+        </nav>
+      </section>
+    </section>
     <img class="top-banner" src="https://placekitten.com/300/150" alt="a kitten">
   </header>
   <main>
     <section>
       <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </section>
-    <section class="polaroid">
-      <div class="cardImg">
-        <img src="https://placekitten.com/200/150" alt="a kitten">
-        <div class="container">A kitten</div>
-      </div>
+    <section class="img-segment">
+      <section class="polaroid">
+        <div class="cardImg">
+          <img src="https://placekitten.com/200/150" alt="a kitten">
+          <div class="container">A kitten</div>
+        </div>
+      </section>
+      <section class="polaroid">
+        <div class="cardImg">
+          <img src="https://placekitten.com/200/150" alt="a kitten">
+          <div class="container">Another kitten</div>
+        </div>
+      </section>
+      <section class="polaroid">
+        <div class="cardImg">
+          <img src="https://placekitten.com/200/150" alt="a kitten">
+          <div class="container">Another kitten?</div>
+        </div>
+      </section>
     </section>
   </main>
   <footer>
