Fixed broken stylings for smaller screens + updated large screen styles

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
   </div>
   <header>
     <section class="title-nav">
-      <section class="title">
-        <h1>Hugh Alun-Jones</h1>
-        <h2>Software Engineering Student at De Montfort University</h2>
+      <section class="full-title">
+        <section class="title">
+          <h1>Hugh Alun-Jones</h1>
+        </section>
+        <section class="sub-title">
+          <h2>Software Engineering Student at De Montfort University</h2>
+        </section>
       </section>
       <section class="nav-bar">
         <nav>
