Altered the header layout to grid and moved the banner img and quote p

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div></div>
   </div>
   <header>
-    <section class="title-nav">
       <section class="full-title">
         <section class="title">
           <h1>Hugh Alun-Jones</h1>
@@ -33,13 +32,11 @@
           <a href="#contact">Contact</a>
         </nav>
       </section>
+    <section class="img-banner">
+      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </section>
-    <img class="top-banner" src="https://placekitten.com/300/150" alt="a kitten">
   </header>
   <main>
-    <section>
-      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </section>
     <section class="img-segment">
       <section class="polaroid">
         <div class="cardImg">
