--- a/index.html
+++ b/index.html
@@ -9,61 +9,71 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="menuToggler">
-    <div></div>
-    <div></div>
-    <div></div>
+  <div id="page-container">
+    <div id="content-wrap">
+      <div id="menuToggler">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <header>
+        <section class="full-title">
+          <section class="title">
+            <h1>Hugh</h1>
+            <h1>Alun-Jones</h1>
+          </section>
+          <section class="sub-title">
+            <h2>Software Engineering Student at De Montfort University</h2>
+          </section>
+        </section>
+        <section class="nav-bar">
+          <nav>
+            <a href="#about">About</a>
+            <div></div>
+            <a href="#work">Work</a>
+            <div></div>
+            <a href="#contact">Contact</a>
+          </nav>
+        </section>
+      </header>
+      <main>
+        <section class="img-banner">
+          <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section class="sous-img">
+          <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section class="img-segment">
+          <section class="polaroid">
+            <div class="cardImg">
+              <img src="https://placekitten.com/1920/1080" alt="a kitten">
+              <div class="container">A kitten</div>
+            </div>
+          </section>
+          <section class="polaroid">
+            <div class="cardImg">
+              <img src="https://placekitten.com/1920/1080" alt="a kitten">
+              <div class="container">Another kitten?</div>
+            </div>
+          </section>
+          <section class="polaroid">
+            <div class="cardImg">
+              <img src="https://placekitten.com/1920/1080" alt="a kitten">
+              <div class="container">Another kitten!</div>
+            </div>
+          </section>
+        </section>
+      </main>
+    </div>
+    <div class="footer">
+      <footer>
+        <section class="socialIcons">
+          <p><a href="https://twitter.com">&#9733;</a></p>
+          <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+        </section>
+      </footer>
+    </div>
   </div>
-  <header>
-      <section class="full-title">
-        <section class="title">
-          <h1>Hugh Alun-Jones</h1>
-        </section>
-        <section class="sub-title">
-          <h2>Software Engineering Student at De Montfort University</h2>
-        </section>
-      </section>
-      <section class="nav-bar">
-        <nav>
-          <a href="#about">About</a>
-          <div></div>
-          <a href="#projects">Projects</a>
-          <div></div>
-          <a href="#contact">Contact</a>
-        </nav>
-      </section>
-    <section class="img-banner">
-      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </section>
-  </header>
-  <main>
-    <section class="img-segment">
-      <section class="polaroid">
-        <div class="cardImg">
-          <img src="https://placekitten.com/200/150" alt="a kitten">
-          <div class="container">A kitten</div>
-        </div>
-      </section>
-      <section class="polaroid">
-        <div class="cardImg">
-          <img src="https://placekitten.com/200/150" alt="a kitten">
-          <div class="container">Another kitten</div>
-        </div>
-      </section>
-      <section class="polaroid">
-        <div class="cardImg">
-          <img src="https://placekitten.com/200/150" alt="a kitten">
-          <div class="container">Another kitten?</div>
-        </div>
-      </section>
-    </section>
-  </main>
-  <footer>
-    <section class="socialIcons">
-      <p><a href="https://twitter.com">&#9733;</a></p>
-      <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
-    </section>
-  </footer>
   <script src="js/scripts.js"></script>
 </body>
 </html>
