Added and linked 3 new pages. Reformatted the img-segment.

--- a/index.html
+++ b/index.html
@@ -3,76 +3,74 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P2508194</title>
+  <title>Hugh Alun-Jones</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="page-container">
-    <div id="content-wrap">
-      <div id="menuToggler">
-        <div></div>
-        <div></div>
-        <div></div>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <section class="full-title">
+      <div class="title">
+        <h1><a href="index.html">Hugh</a></h1>
+        <h1><a href="index.html">Alun-Jones</a></h1>
       </div>
-      <header>
-        <section class="full-title">
-          <section class="title">
-            <h1>Hugh</h1>
-            <h1>Alun-Jones</h1>
-          </section>
-          <section class="sub-title">
-            <h2>Software Engineering Student at De Montfort University</h2>
-          </section>
-        </section>
-        <section class="nav-bar">
-          <nav>
-            <a href="#about">About</a>
-            <div></div>
-            <a href="#work">Work</a>
-            <div></div>
-            <a href="#contact">Contact</a>
-          </nav>
-        </section>
-      </header>
-      <main>
-        <section class="img-banner">
-          <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </section>
-        <section class="sous-img">
-          <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </section>
-        <section class="img-segment">
-          <section class="polaroid">
-            <div class="cardImg">
-              <img src="https://placekitten.com/1920/1080" alt="a kitten">
-              <div class="container">A kitten</div>
-            </div>
-          </section>
-          <section class="polaroid">
-            <div class="cardImg">
-              <img src="https://placekitten.com/1920/1080" alt="a kitten">
-              <div class="container">Another kitten?</div>
-            </div>
-          </section>
-          <section class="polaroid">
-            <div class="cardImg">
-              <img src="https://placekitten.com/1920/1080" alt="a kitten">
-              <div class="container">Another kitten!</div>
-            </div>
-          </section>
-        </section>
-      </main>
+      <div class="sub-title">
+        <h2>Software Engineering Student at De Montfort University</h2>
+      </div>
+    </section>
+    <section class="nav-bar">
+      <nav>
+        <a href="about.html">About</a>
+        <div></div>
+        <a href="work.html">Work</a>
+        <div></div>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main>
+    <div class="img-banner">
+      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
-    <div class="footer">
-      <footer>
-        <section class="socialIcons">
-          <p><a href="https://twitter.com">&#9733;</a></p>
-          <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
-        </section>
-      </footer>
-    </div>
+    <section class="sous-img">
+      <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </section>
+    <section class="img-segment">
+      <div class="slide-img">
+        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
+        <div class="txt-overlay">
+          <div class="slide-title">Project One</div>
+          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        </div>
+      </div>
+      <div class="slide-img">
+        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
+        <div class="txt-overlay">
+          <div class="slide-title">Project Two</div>
+          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        </div>
+      </div>
+      <div class="slide-img">
+        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
+        <div class="txt-overlay">
+          <div class="slide-title">Project Three</div>
+          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <div class="footer">
+    <footer>
+      <section class="social-icons">
+        <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+      </section>
+    </footer>
   </div>
   <script src="js/scripts.js"></script>
 </body>
