Altered index layout to work with grid. Changed colour scheme.

--- a/work.html
+++ b/work.html
@@ -28,12 +28,22 @@
         <nav>
           <a href="about.html">About</a>
           <div></div>
-          <a href="work.html">Work</a>
+          <a href="index.html">Work</a>
           <div></div>
           <a href="contact.html">Contact</a>
         </nav>
       </section>
     </header>
+    <main>
+      
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+        </section>
+      </footer>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
