--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <nav>
           <a href="about.html">About</a>
           <div></div>
-          <a href="work.html">Work</a>
+          <a href="index.html">Work</a>
           <div></div>
           <a href="contact.html">Contact</a>
         </nav>
