--- a/index.html
+++ b/index.html
@@ -15,31 +15,32 @@
     <div></div>
   </div>
   <header>
-    <section class="full-title">
-      <div class="title">
-        <h1><a href="index.html">Hugh</a></h1>
-        <h1><a href="index.html">Alun-Jones</a></h1>
-      </div>
-      <div class="sub-title">
-        <h2>Software Engineering Student at De Montfort University</h2>
-      </div>
-    </section>
     <section class="nav-bar">
       <nav>
         <a href="about.html">About</a>
         <div></div>
-        <a href="work.html">Work</a>
+        <a href="index.html">Projects</a>
         <div></div>
         <a href="contact.html">Contact</a>
       </nav>
+      <div class="nav-border"></div>
     </section>
   </header>
   <main>
-    <div class="img-banner">
-      <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <section class="sous-img">
-      <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <section class="hero-banner">
+      <div class="full-title">
+        <div class="title">
+          <h1><a href="index.html">Hugh</br>Alun-Jones</a></h1>
+        </div>
+        <div class="sub-title">
+          <h2>Software Engineering Student at De Montfort University</h2>
+        </div>
+      </div>
+      <div class="img-banner">
+      </div>
+      <section class="sous-img">
+        <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </section>
     </section>
     <section class="img-segment">
       <div class="slide-img">
