Made alterations to the main page. Began work on About and Contact pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div id="menuToggler">
     <div></div>
     <div></div>
-    <div></div>
   </div>
   <header>
     <section class="nav-bar">
@@ -43,33 +42,24 @@
       </section>
     </section>
     <section class="img-segment">
-      <div class="slide-img">
-        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
-        <div class="txt-overlay">
-          <div class="slide-title">Project One</div>
-          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-        </div>
+      <div class="project-segment">
+        <h3>Project X</h3>
+        <div class="project-img"></div>
       </div>
-      <div class="slide-img">
-        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
-        <div class="txt-overlay">
-          <div class="slide-title">Project Two</div>
-          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-        </div>
+      <div class="project-segment">
+        <h3>Project X</h3>
+        <div class="project-img"></div>
       </div>
-      <div class="slide-img">
-        <img src="https://placekitten.com/720/720" alt="A kitten" class="img-bg">
-        <div class="txt-overlay">
-          <div class="slide-title">Project Three</div>
-          <div class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-        </div>
+      <div class="project-segment">
+        <h3>Project X</h3>
+        <div class="project-img"></div>
       </div>
     </section>
   </main>
   <div class="footer">
     <footer>
       <section class="social-icons">
-        <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+        <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
       </section>
     </footer>
   </div>
