--- a/about.html
+++ b/about.html
@@ -12,28 +12,34 @@
     <div id="menuToggler">
       <div></div>
       <div></div>
-      <div></div>
     </div>
     <header>
-      <section class="full-title">
-        <div class="title">
-          <h1><a href="index.html">Hugh</a></h1>
-          <h1><a href="index.html">Alun-Jones</a></h1>
-        </div>
-        <div class="sub-title">
-          <h2>Software Engineering Student at De Montfort University</h2>
-        </div>
-      </section>
       <section class="nav-bar">
         <nav>
           <a href="about.html">About</a>
           <div></div>
-          <a href="index.html">Work</a>
+          <a href="index.html">Projects</a>
           <div></div>
           <a href="contact.html">Contact</a>
         </nav>
+        <div class="nav-border"></div>
       </section>
     </header>
+    <main class="about">
+      <div class="about-img"></div>
+      <section class="about-description">
+        <h2>Lorem Ipsum</h2>
+        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+        </section>
+      </footer>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
