--- a/contact.html
+++ b/contact.html
@@ -12,26 +12,17 @@
     <div id="menuToggler">
       <div></div>
       <div></div>
-      <div></div>
     </div>
     <header>
-      <section class="full-title">
-        <div class="title">
-          <h1><a href="index.html">Hugh</a></h1>
-          <h1><a href="index.html">Alun-Jones</a></h1>
-        </div>
-        <div class="sub-title">
-          <h2>Software Engineering Student at De Montfort University</h2>
-        </div>
-      </section>
       <section class="nav-bar">
         <nav>
           <a href="about.html">About</a>
           <div></div>
-          <a href="index.html">Work</a>
+          <a href="index.html">Projects</a>
           <div></div>
           <a href="contact.html">Contact</a>
         </nav>
+        <div class="nav-border"></div>
       </section>
     </header>
     <script src="js/scripts.js"></script>
