--- a/about.html
+++ b/about.html
@@ -8,38 +8,38 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
-  <body>
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
-    </div>
-    <header>
-      <section class="nav-bar">
-        <nav>
-          <a href="about.html">About</a>
-          <div></div>
-          <a href="index.html">Projects</a>
-          <div></div>
-          <a href="contact.html">Contact</a>
-        </nav>
-        <div class="nav-border"></div>
+<body>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <h3><a href="index.html">Hugh Alun-Jones</a></h3>
+    <section class="nav-bar">
+      <nav>
+        <a href="about.html">About</a>
+        <div></div>
+        <a href="index.html#img-segment">Projects</a>
+        <div></div>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main class="about">
+    <img class="about-img" src="C:\Users\hugha\OneDrive\Desktop\Front-End Web Design\assignment-hughalunjones\images\me.jpg" alt="A picture of Hugh Alun-Jones">
+    <section class="about-description">
+      <h2>I'm Hugh</h2>
+      <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+  </main>
+  <div class="footer">
+    <footer>
+      <section class="social-icons">
+        <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
       </section>
-    </header>
-    <main class="about">
-      <div class="about-img"></div>
-      <section class="about-description">
-        <h2>Lorem Ipsum</h2>
-        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
-    </main>
-    <div class="footer">
-      <footer>
-        <section class="social-icons">
-          <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
-        </section>
-      </footer>
-    </div>
-    <script src="js/scripts.js"></script>
-  </body>
+    </footer>
+  </div>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
