--- a/contact.html
+++ b/contact.html
@@ -3,28 +3,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
-  <body>
-    <div id="menuToggler">
-      <div></div>
-      <div></div>
-    </div>
-    <header>
-      <section class="nav-bar">
-        <nav>
-          <a href="about.html">About</a>
-          <div></div>
-          <a href="index.html">Projects</a>
-          <div></div>
-          <a href="contact.html">Contact</a>
-        </nav>
-        <div class="nav-border"></div>
-      </section>
-    </header>
-    <script src="js/scripts.js"></script>
-  </body>
+<body>
+  <div id="menuToggler">
+    <div></div>
+    <div></div>
+  </div>
+  <header>
+    <h3><a href="index.html">Hugh Alun-Jones</a></h3>
+    <section class="nav-bar">
+      <nav>
+        <a href="about.html">About</a>
+        <div></div>
+        <a href="index.html#img-segment">Projects</a>
+        <div></div>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
+  <main class="contact">
+    <div class="contact-img"></div>
+    <section class="contact-info">
+      <p class="email">hughalunjones12@gmail.com</p>
+      <p class="mobile">(+44)7714714719</p>
+    </section>
+  </main>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
