--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div></div>
   </div>
   <header>
+    <h3 class="h3-index"><a href="index.html">Hugh Alun-Jones</a></h3>
     <section class="nav-bar">
       <nav>
         <a href="about.html">About</a>
         <div></div>
-        <a href="index.html">Projects</a>
+        <a href="#img-segment">Projects</a>
         <div></div>
         <a href="contact.html">Contact</a>
       </nav>
-      <div class="nav-border"></div>
     </section>
   </header>
   <main>
@@ -41,7 +41,7 @@
         <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </section>
     </section>
-    <section class="img-segment">
+    <section id="img-segment">
       <div class="project-segment">
         <h3>Project X</h3>
         <div class="project-img"></div>
