Added full page fade for smooth transition. Started projects page styles

--- a/contact.html
+++ b/contact.html
@@ -9,29 +9,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="menuToggler">
-    <div></div>
-    <div></div>
-  </div>
-  <header>
-    <h3><a href="index.html">Hugh Alun-Jones</a></h3>
-    <section class="nav-bar">
-      <nav>
-        <a href="about.html">About</a>
-        <div></div>
-        <a href="index.html#img-segment">Projects</a>
-        <div></div>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </section>
-  </header>
-  <main class="contact">
-    <div class="contact-img"></div>
-    <section class="contact-info">
-      <p class="email">hughalunjones12@gmail.com</p>
-      <p class="mobile">(+44)7714714719</p>
-    </section>
-  </main>
+  <svg id="fader">
+    <div id="menuToggler">
+      <div></div>
+      <div></div>
+    </div>
+    <header>
+      <div class="homelink-container">
+        <h3 class="homelink"><a class="nav" href="index.html">Hugh Alun-Jones,</a></h3>
+        <h4 class="homelink-sub">Software Engineering Student</h4>
+      </div>
+      <section class="nav-bar">
+        <nav>
+          <a class="nav" href="about.html">About</a>
+          <div></div>
+          <a class="nav" href="index.html#img-segment">Projects</a>
+          <div></div>
+          <a class="nav" href="contact.html">Contact</a>
+        </nav>
+      </section>
+    </header>
+    <main class="contact">
+      <section class="contact-info">
+        <p class="email"><a href="mailto:hughalunjones12@gmail.com">hughalunjones12@gmail.com</a></p>
+      </section>
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+        </section>
+      </footer>
+    </div>
+  </svg>
   <script src="js/scripts.js"></script>
 </body>
 </html>
