--- a/index.html
+++ b/index.html
@@ -9,60 +9,62 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="menuToggler">
-    <div></div>
-    <div></div>
-  </div>
-  <header>
-    <h3 class="h3-index"><a href="index.html">Hugh Alun-Jones</a></h3>
-    <section class="nav-bar">
-      <nav>
-        <a href="about.html">About</a>
-        <div></div>
-        <a href="#img-segment">Projects</a>
-        <div></div>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </section>
-  </header>
-  <main>
-    <section class="hero-banner">
-      <div class="full-title">
-        <div class="title">
-          <h1><a href="index.html">Hugh</br>Alun-Jones</a></h1>
-        </div>
-        <div class="sub-title">
-          <h2>Software Engineering Student at De Montfort University</h2>
-        </div>
-      </div>
-      <div class="img-banner">
-      </div>
-      <section class="sous-img">
-        <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <svg id="fader">
+    <div id="menuToggler">
+      <div></div>
+      <div></div>
+    </div>
+    <header>
+      <h3 class="h3-index"><a class="nav" href="index.html">Hugh Alun-Jones</a></h3>
+      <section class="nav-bar">
+        <nav>
+          <a class="nav" href="about.html">About</a>
+          <div></div>
+          <a class="nav" href="#img-segment">Projects</a>
+          <div></div>
+          <a class="nav" href="contact.html">Contact</a>
+        </nav>
       </section>
-    </section>
-    <section id="img-segment">
-      <div class="project-segment">
-        <h3>Project X</h3>
-        <div class="project-img"></div>
-      </div>
-      <div class="project-segment">
-        <h3>Project X</h3>
-        <div class="project-img"></div>
-      </div>
-      <div class="project-segment">
-        <h3>Project X</h3>
-        <div class="project-img"></div>
-      </div>
-    </section>
-  </main>
-  <div class="footer">
-    <footer>
-      <section class="social-icons">
-        <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+    </header>
+    <main>
+      <section class="hero-banner">
+        <div class="full-title">
+          <div class="title">
+            <h1>Hugh</br>Alun-Jones</h1>
+          </div>
+          <div class="sub-title">
+            <h2>Software Engineering Student at De Montfort University</h2>
+          </div>
+        </div>
+        <div class="img-banner">
+        </div>
+        <section class="sous-img">
+          <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
       </section>
-    </footer>
-  </div>
+      <section id="img-segment">
+        <div class="project-segment">
+          <h3 class="project-title">Project X</h3>
+          <div class="project-img"></div>
+        </div>
+        <div class="project-segment">
+          <h3 class="project-title">Project X</h3>
+          <div class="project-img"></div>
+        </div>
+        <div class="project-segment">
+          <h3 class="project-title">Project X</h3>
+          <div class="project-img"></div>
+        </div>
+      </section>
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+        </section>
+      </footer>
+    </div>
+  </svg>
   <script src="js/scripts.js"></script>
 </body>
 </html>
