--- a/about.html
+++ b/about.html
@@ -9,37 +9,42 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="menuToggler">
-    <div></div>
-    <div></div>
-  </div>
-  <header>
-    <h3><a href="index.html">Hugh Alun-Jones</a></h3>
-    <section class="nav-bar">
-      <nav>
-        <a href="about.html">About</a>
-        <div></div>
-        <a href="index.html#img-segment">Projects</a>
-        <div></div>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </section>
-  </header>
-  <main class="about">
-    <img class="about-img" src="C:\Users\hugha\OneDrive\Desktop\Front-End Web Design\assignment-hughalunjones\images\me.jpg" alt="A picture of Hugh Alun-Jones">
-    <section class="about-description">
-      <h2>I'm Hugh</h2>
-      <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-  </main>
-  <div class="footer">
-    <footer>
-      <section class="social-icons">
-        <p><a href="https://github.com/hughalunjones/">&#10084;</a></p>
+  <svg id="fader">
+    <div id="menuToggler">
+      <div></div>
+      <div></div>
+    </div>
+    <header>
+      <div class="homelink-container">
+        <h3 class="homelink"><a class="nav" href="index.html">Hugh Alun-Jones,</a></h3>
+        <h4 class="homelink-sub">Software Engineering Student</h4>
+      </div>
+      <section class="nav-bar">
+        <nav>
+          <a class="nav" href="about.html">About</a>
+          <div></div>
+          <a class="nav" href="index.html#img-segment">Projects</a>
+          <div></div>
+          <a class="nav" href="contact.html">Contact</a>
+        </nav>
       </section>
-    </footer>
-  </div>
+    </header>
+    <main class="about">
+      <img class="about-img" src="C:\Users\hugha\OneDrive\Desktop\Front-End Web Design\assignment-hughalunjones\images\me.jpg" alt="A picture of Hugh Alun-Jones">
+      <section class="about-description">
+        <h2>I'm Hugh</h2>
+        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+        </section>
+      </footer>
+    </div>
+  </svg>
   <script src="js/scripts.js"></script>
 </body>
 </html>
