--- a/work.html
+++ b/work.html
@@ -7,5 +7,54 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
-</head>  
+</head>
+<body>
+  <svg id="fader">
+    <div id="menuToggler">
+      <div></div>
+      <div></div>
+    </div>
+    <header>
+      <div class="homelink-container">
+        <h3 class="homelink"><a class="nav" href="index.html">Hugh Alun-Jones,</a></h3>
+        <h4 class="homelink-sub">Software Engineering Student</h4>
+      </div>
+      <section class="nav-bar">
+        <nav>
+          <a class="nav" href="about.html">About</a>
+          <div></div>
+          <a class="nav" href="index.html#img-segment">Projects</a>
+          <div></div>
+          <a class="nav" href="contact.html">Contact</a>
+        </nav>
+      </section>
+    </header>
+    <main class="main-projects">
+      <div class="projects-container">
+        <section id="project-one" class="projectX">
+          <div class="project-img-slide"></div>
+          <div class="project-title-fade">
+            <h3 class="project-title">Project X</h3>
+          </div>
+          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <section id="project-two" class="projectX">
+          <div class="project-img-slide"></div>
+          <div class="project-title-fade">
+            <h3 class="project-title">Project X</h3>
+          </div>
+          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+      </div>
+    </main>
+    <div class="footer">
+      <footer>
+        <section class="social-icons">
+          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+        </section>
+      </footer>
+    </div>
+  </svg>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
