Changed the image on the about page. Correctly working from local file.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </div>
     <header>
       <div class="homelink-container">
-        <h3 class="homelink"><a class="nav" href="index.html">Hugh Alun-Jones,</a></h3>
+        <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
         <h4 class="homelink-sub">Software Engineering Student</h4>
       </div>
       <section class="nav-bar">
