--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     </div>
     <header>
       <div class="homelink-container">
-        <h3 class="homelink"><a class="nav" href="index.html">Hugh Alun-Jones,</a></h3>
+        <a id="homelink" class="nav" href="index.html">Hugh Alun-Jones,</a>
         <h4 class="homelink-sub">Software Engineering Student</h4>
       </div>
       <section class="nav-bar">
@@ -30,7 +30,7 @@
       </section>
     </header>
     <main class="about">
-      <img class="about-img" src="C:\Users\hugha\OneDrive\Desktop\Front-End Web Design\assignment-hughalunjones\images\me.jpg" alt="A picture of Hugh Alun-Jones">
+      <div class="about-img" alt="An image of Hugh Alun-Jones"></div>
       <section class="about-description">
         <h2>I'm Hugh</h2>
         <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
