Fixed an issue with the page load fader. Fixed the project page styling.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader">
+  <svg id="fader" class="fade-out">
     <div id="menuToggler">
       <div></div>
       <div></div>
@@ -45,15 +45,21 @@
       <section id="img-segment">
         <div class="project-segment">
           <h3 class="project-title">Project X</h3>
-          <div class="project-img"></div>
+          <a class="nav" href="work.html">
+            <div class="project-img"></div>
+          </a>
         </div>
         <div class="project-segment">
           <h3 class="project-title">Project X</h3>
-          <div class="project-img"></div>
+          <a class="nav" href="work.html">
+            <div class="project-img"></div>
+          </a>
         </div>
         <div class="project-segment">
           <h3 class="project-title">Project X</h3>
-          <div class="project-img"></div>
+          <a class="nav" href="work.html">
+            <div class="project-img"></div>
+          </a>
         </div>
       </section>
     </main>
