--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
 </head>
 <body>
-  <svg id="fader">
+  <svg id="fader" class="fade-out">
     <div id="menuToggler">
       <div></div>
       <div></div>
