Began work on a dynamic project page - close to completion.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <h2>Software Engineering Student at De Montfort University</h2>
           </div>
         </div>
-        <div class="img-banner">
-        </div>
+        <div class="img-banner"></div>
         <section class="sous-img">
           <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
