Dynamic project page now fully functional.

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
     </header>
     <main class="contact">
       <section class="contact-info">
+        <p class="contact-p">Get in touch:</p>
         <p class="email"><a href="mailto:hughalunjones12@gmail.com">hughalunjones12@gmail.com</a></p>
       </section>
     </main>
