--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <h3 class="h3-index"><a class="nav" href="index.html">Hugh Alun-Jones</a></h3>
       <section class="nav-bar">
-        <nav>
+        <nav >
           <a class="nav" href="about.html">About</a>
           <div></div>
           <a class="nav" href="#img-segment">Projects</a>
@@ -43,20 +43,20 @@
       </section>
       <section id="img-segment">
         <div class="project-segment">
-          <h3 class="project-title">Project X</h3>
-          <a class="nav" href="work.html">
+          <h3 class="project-title">Project One</h3>
+          <a class="nav" href="work.html?id=0" rel=nofollow>
             <div class="project-img"></div>
           </a>
         </div>
         <div class="project-segment">
-          <h3 class="project-title">Project X</h3>
-          <a class="nav" href="work.html">
+          <h3 class="project-title">Project Two</h3>
+          <a class="nav" href="work.html?id=1" rel=nofollow>
             <div class="project-img"></div>
           </a>
         </div>
         <div class="project-segment">
-          <h3 class="project-title">Project X</h3>
-          <a class="nav" href="work.html">
+          <h3 class="project-title">Project Three</h3>
+          <a class="nav" href="work.html?id=2" rel=nofollow>
             <div class="project-img"></div>
           </a>
         </div>
