Removed the cats, added content. Finalised some other elements.

--- a/about.html
+++ b/about.html
@@ -30,25 +30,31 @@
       </section>
     </header>
     <main class="about">
-      <div class="about-img" alt="An image of Hugh Alun-Jones"></div>
-      <section class="about-description">
-        <h2>I'm Hugh</h2>
-        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <section class="top-about">
+        <div class="about-img" alt="An image of Hugh Alun-Jones"></div>
+        <section class="about-description">
+          <h2>Hello!</h2>
+          <p class="about">My name is Hugh Alun-Jones and I am a software engineering student currently based in Leicestershire. I created this website to show off some of my <a class="about-project-link" href="index.html#img-segment">work and projects</a>, this website being one of them!</p>
+          <p class="about">My current focus is on web development and game design, but I'm always looking to learn more.</p>
+        </section>
       </section>
-      <section class="current-reading">
+      <div class="about-border"></div>
+      <section class="currently-reading">
+        <h2 class="c-r-header">Currently reading</h2>
+        <div class="currently-reading-container">
 
+        </div>
       </section>
     </main>
     <div class="footer">
       <footer>
         <section class="social-icons">
-          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
         </section>
       </footer>
     </div>
   </svg>
   <script src="js/scripts.js"></script>
-  <script src="js/book-api.js"></script>
+  <script src="js/current-reading.js"></script>
 </body>
 </html>
