--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <div class="footer">
       <footer>
         <section class="social-icons">
-          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
         </section>
       </footer>
     </div>
