--- a/index.html
+++ b/index.html
@@ -38,26 +38,20 @@
         </div>
         <div class="img-banner"></div>
         <section class="sous-img">
-          <p class="sous-quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p class="sous-quote">I will be graduating with a BSc Software Engineering in 2021 and I am now seeking work opportunities.</p>
         </section>
       </section>
       <section id="img-segment">
         <div class="project-segment">
-          <h3 class="project-title">Project One</h3>
+          <h3 class="project-title">Museum Game</h3>
           <a class="nav" href="work.html?id=0" rel=nofollow>
-            <div class="project-img"></div>
+            <div class="project-img one" alt="An art gallery scene in a pixel art style"></div>
           </a>
         </div>
         <div class="project-segment">
-          <h3 class="project-title">Project Two</h3>
+          <h3 class="project-title">Portfolio Website</h3>
           <a class="nav" href="work.html?id=1" rel=nofollow>
-            <div class="project-img"></div>
-          </a>
-        </div>
-        <div class="project-segment">
-          <h3 class="project-title">Project Three</h3>
-          <a class="nav" href="work.html?id=2" rel=nofollow>
-            <div class="project-img"></div>
+            <div class="project-img two" alt="A collection of Javascript, HTML and CSS code"></div>
           </a>
         </div>
       </section>
@@ -65,7 +59,7 @@
     <div class="footer">
       <footer>
         <section class="social-icons">
-          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
         </section>
       </footer>
     </div>
