--- a/work.html
+++ b/work.html
@@ -34,21 +34,15 @@
         <section id="project-one" class="projectX">
         </section>
       </div>
-      <section class="arrows">
-        <div id="leftArrow">
-          <div class="l-top"></div>
-          <div class="l-bottom"></div>
-        </div>
-        <div id="rightArrow">
-          <div class="r-top"></div>
-          <div class="r-bottom"></div>
-        </div>
+      <section class="nav-dot">
+        <a class="nav" href="work.html?id=0"><div class="dot"> <p class="dotnum">1</p> </div></a>
+        <a class="nav" href="work.html?id=1"><div class="dot"> <p class="dotnum">2</p> </div></a>
       </section>
     </main>
     <div class="footer">
       <footer>
         <section class="social-icons">
-          <p><a href="https://github.com/hughalunjones/">GitHub</a></p>
+          <a href="https://github.com/hughalunjones/"><div class="github"></div></a>
         </section>
       </footer>
     </div>
